Fixes text aligned inside checkbox

--- a/base.scss
+++ b/base.scss
@@ -95,9 +95,9 @@ section {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 0.8rem;
   font-weight: 600;
-  border-radius: 5px;
-  padding: 10px;
-  background-color: white;
+  // border-radius: 5px;
+  // padding: 10px;
+  // background-color: white;
   color: #243B53;
   max-width: 175px;
   height: 40px;
@@ -109,6 +109,7 @@ section {
   --checked-state-check-color: #fff;
   --outline-color: var(--checked-state-bg-color);
   --outline-offset: 2px;
+  --outline-radius: 5px;
 }
 
 // hide the checkbox accessibly
@@ -125,8 +126,14 @@ section {
 // basic styles for the svg
 .c-custom-checkbox svg {
   /* set SVG dimensions in ems; i.e. relative to the font size so that it scales with the size of the font. */
-  width: 1em;
-  height: 1em;
+  // width: 1em;
+  // height: 1em;
+  width: 175px;
+  height: 40px;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: white;
+  color: #243B53;
 
   margin-right: 0.5em;
   margin-top: .1em;
@@ -140,13 +147,22 @@ section {
 // style changes inside the svg when the checkbox is checked
 .c-custom-checkbox input[type="checkbox"]:checked + svg {
   .cb-bg {
-    fill: var(--checked-state-bg-color);
-    stroke: var(--checked-state-bg-color);
+    // fill: var(--checked-state-bg-color);
+    // stroke: var(--checked-state-bg-color);
   }
 
   .cb-cm {
-    stroke: var(--checked-state-check-color);
+    // stroke: var(--checked-state-check-color);
   }
+
+  .primary {
+    fill: #6f213f;
+  }
+
+  .secondary {
+    fill: #ffbbca;
+  }
+
 }
 
 .c-custom-checkbox input[type="checkbox"]:focus + svg {
@@ -154,6 +170,10 @@ section {
   outline-offset: var(--outline-offset);
 }
 
+.checkbox_word {
+    fill: #243B53;
+    // word-break: break-all;
+}
 
 .c-custom-checkbox input[type="checkbox"]:focus:not(:focus-visible) + svg {
   outline: none;
